# gitlab-ci-validate-rust

./: .travis.yml  Cargo.toml  README.md
src/: main.rs
tests/: cli.rs
