[package]
name = "gitlab-ci-validate"
version = "0.0.3"
authors = ["pradel <pradel.leo@gmail.com>"]
description = "Checks if your .gitlab-ci.yml file is valid."
repository = "https://github.com/pradel/gitlab-ci-validate-rust"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
clap = "2.33.0"
failure = "0.1.5"
exitfailure = "0.5.1"
reqwest = "0.9.19"
serde = "1.0.97"
serde_json = "1.0.40"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"

[badges]
travis-ci = { repository = "pradel/gitlab-ci-validate-rust", branch = "master" }
