[package]
name = "gitlab-ci-validate"
version = "0.0.4"
authors = ["pradel <pradel.leo@gmail.com>"]
description = "Checks if your .gitlab-ci.yml file is valid."
repository = "https://github.com/pradel/gitlab-ci-validate-rust"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
clap = "2.33.0"
failure = "0.1.6"
exitfailure = "0.5.1"
reqwest = "0.9.22"
serde = "1.0.102"
serde_json = "1.0.41"

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"

[badges]
travis-ci = { repository = "pradel/gitlab-ci-validate-rust", branch = "master" }
