[package]
name = "gitlab-ci-validate"
version = "0.0.4"
authors = ["pradel <pradel.leo@gmail.com>"]
description = "Checks if your .gitlab-ci.yml file is valid."
repository = "https://github.com/pradel/gitlab-ci-validate-rust"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
clap = "2.33"
failure = "0.1"
exitfailure = "0.5"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"

[badges]
travis-ci = { repository = "pradel/gitlab-ci-validate-rust", branch = "master" }
